--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,7 +84,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildToolsVersion '32.1.0-rc1'
+//    buildToolsVersion '32.1.0 rc1'
 }
 
 flutter {
@@ -93,7 +93,7 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.21"
-    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-analytics:21.0.0'
 //    implementation 'com.tom_roush:pdfbox-android:1.8.10.0'
     implementation 'com.tom-roush:pdfbox-android:2.0.21.0'
@@ -105,8 +105,8 @@ dependencies {
     implementation 'com.github.barteksc:pdfium-android:1.9.0'
     implementation 'org.apache.commons:commons-io:1.3.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
-    implementation 'com.google.firebase:firebase-auth:21.0.4'
-    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+    implementation 'com.google.firebase:firebase-auth:21.0.5'
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.21"
@@ -116,4 +116,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-inline:3.11.1'
     testImplementation 'androidx.test:core:1.4.0'
+
+
+    implementation "androidx.core:core-ktx:1.7.0"
 }
