--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: NorthSails Smart Wind
 publish_to: 'none'
 
 
-version: 1.1.27+67
+version: 1.1.37+77
 
 environment:
   sdk: ">=2.12.0 <4.0.0"
@@ -26,7 +26,7 @@ dependencies:
 
   #  --------------------------------------------------
 
-  flutter_share: ^2.0.0
+  flutter_share: 2.0.0
   flutter_barcode_scanner: ^2.0.0
   flutter_pdfview: ^1.2.2
   flutter_inappwebview: ^5.4.3+7
@@ -42,17 +42,17 @@ dependencies:
   jwt_decode: ^0.3.1
   webview_flutter: ^3.0.4
   permission_handler: ^9.2.0
-  path_provider: ^2.0.10
+  path_provider: ^2.0.11
   hex: ^0.2.0
   package_info_plus: ^1.4.2
-  dropdown_search: ^4.0.1
+  dropdown_search: ^5.0.2
   measured_size: ^1.0.0
   device_information: ^0.0.4
   device_info: ^2.0.3
   cached_network_image: ^3.2.1
-  video_player: ^2.4.2
+  video_player: ^2.4.4
   group_list_view: ^1.1.1
-  data_table_2: ^2.2.3
+  data_table_2: ^2.3.0
 
 
   custom_webview:
@@ -66,20 +66,21 @@ dependencies:
 
   splash_screen_view: ^3.0.0
   decorated_icon: ^1.2.1
-  ota_update: ^4.0.1
+  #  ota_update: ^4.0.1
   timeline_tile: ^2.0.0
 
   dotted_border: ^2.0.0+2
   socket_io_client: ^1.0.2
-  file_picker: ^4.6.0
+  file_picker: ^4.6.1
   universal_html: ^2.0.8
-  dropdown_button2: ^1.5.2
+  dropdown_button2: ^1.5.3
   pdfx: ^2.0.1+2
   textfield_search: ^0.10.0
   searchfield: ^0.6.5
   csv: ^5.0.1
   pdf_render: ^1.1.0
-  syncfusion_flutter_charts: ^20.1.57
+  syncfusion_flutter_charts: ^20.1.59
+  random_password_generator: ^0.2.1
 
 
 dev_dependencies:
@@ -104,9 +105,9 @@ flutter:
     - assets/js.js
     - assets/js1.txt
     - assets/loginVideo.mp4
-    - assets/north_sails-logo.png
-    - assets/north_sails-logo_tr.png
-    - assets/north_sails-logox50.png
+    - assets/north_sails_logo.png
+    - assets/north_sails_logo_tr.png
+    - assets/north_sails_logox50.png
     - assets/QACheckList.json
     - assets/splash.png
     - assets/splash1.png
@@ -137,16 +138,16 @@ splash_screen_view:
   image: assets/splash.png
 
   #color_dark: "#042a49"
-  #background_image_dark: "assets/dark-background.png"
+  background_image_dark: "assets/images/dark_background.png"
   #image_dark: assets/splash-invert.png
 
   #android: false
   #ios: false
   #web: false
 
-  #android_gravity: center
+  android_gravity: center
   #ios_content_mode: center
-  #web_image_mode: center
+  web_image_mode: center
 
   fullscreen: true
 
