--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.1.44+84
+version: 1.1.46+86
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -16,12 +16,12 @@ dependencies:
     sdk: flutter
 
   #  firebase------------------------------------------
-  firebase_core: ^1.18.0
+  firebase_core: ^1.19.1
   firebase_analytics:
-  firebase_crashlytics: ^2.8.2
-  firebase_auth: ^3.3.20
-  firebase_messaging: ^11.4.2
-  firebase_database: ^9.0.16
+  firebase_crashlytics: ^2.8.4
+  firebase_auth: ^3.4.1
+  firebase_messaging: ^11.4.4
+  firebase_database: ^9.0.18
 
   #  --------------------------------------------------
 
@@ -51,7 +51,7 @@ dependencies:
   cached_network_image: ^3.2.1
   video_player: ^2.4.5
   group_list_view: ^1.1.1
-  data_table_2: ^2.3.3
+  data_table_2: ^2.3.5
 
 
   custom_webview:
@@ -59,7 +59,7 @@ dependencies:
   json_annotation: ^4.5.0
 
   graphql_flutter: ^5.1.0
-  hive: ^2.2.2
+  hive: ^2.2.3
   hive_flutter: ^1.1.0
   uuid: ^3.0.6
 
@@ -73,13 +73,15 @@ dependencies:
   file_picker: ^4.6.1
   universal_html: ^2.0.8
   dropdown_button2: ^1.6.2
-  pdfx: ^2.0.1+2
+  pdfx: ^2.1.1
   textfield_search: ^0.10.0
   searchfield: ^0.6.6
   csv: ^5.0.1
   pdf_render: ^1.1.0
-  syncfusion_flutter_charts: ^20.1.61
+  syncfusion_flutter_charts: ^20.2.36
   random_password_generator: ^0.2.1
+  flutter_slidable: ^1.3.0
+  intl: ^0.17.0
 
 
 dev_dependencies:
