--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.1.67+107
+version: 1.1.71+111
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -17,13 +17,13 @@ dependencies:
 
   #  firebase------------------------------------------
   firebase_core: ^1.19.1
-  firebase_analytics: ^9.2.1
+  #  firebase_analytics:
   firebase_crashlytics: ^2.8.4
   firebase_auth: ^3.4.1
   firebase_messaging: ^11.4.4
-  firebase_database: ^9.0.20
+  firebase_database: ^9.0.18
   firebase_auth_platform_interface: 6.3.1
-  firebase_core_web: ^1.7.1
+  firebase_core_web: 1.6.6
 
   #  --------------------------------------------------
 
@@ -85,7 +85,7 @@ dependencies:
   flutter_slidable: ^2.0.0
   intl: ^0.17.0
   app_settings: ^4.1.8
-
+  contextmenu: ^3.0.0
 
 
 
@@ -105,6 +105,7 @@ dev_dependencies:
 flutter:
 
   assets:
+    - assets/accountBlocked.jpg
     - assets/fileNotFound.png
     - assets/fonts/NsIcons.ttf
     - assets/images/background.jpg
