--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,10 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.1.90+130
+version: 1.1.95+135
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -16,14 +16,14 @@ dependencies:
     sdk: flutter
 
   #  firebase------------------------------------------
-  firebase_core: ^1.21.0
+  firebase_core: ^1.21.1
   #  firebase_analytics:
-  firebase_crashlytics: ^2.8.8
-  firebase_auth: ^3.6.4
-  firebase_messaging: ^12.0.3
-  firebase_database: ^9.1.2
-  firebase_auth_platform_interface: ^6.5.4
-  firebase_core_web: ^1.7.1
+  firebase_crashlytics: ^2.8.9
+  firebase_auth: ^3.7.0
+  firebase_messaging: ^13.0.0
+  firebase_database: ^9.1.3
+  firebase_auth_platform_interface: ^6.6.0
+  firebase_core_web: ^1.7.2
 
   #  --------------------------------------------------
 
@@ -38,7 +38,7 @@ dependencies:
   percent_indicator: ^4.2.2
   nfc_manager: ^3.1.1
   shared_preferences: ^2.0.15
-  animations: ^2.0.3
+  animations: ^2.0.4
   image_picker: ^0.8.5+3
   jwt_decode: ^0.3.1
   webview_flutter: ^3.0.4
@@ -50,10 +50,10 @@ dependencies:
   measured_size: ^1.0.0
   device_information: ^0.0.4
   device_info: ^2.0.3
-  cached_network_image: ^3.2.1
+  cached_network_image: ^3.2.2
   video_player: ^2.4.7
   group_list_view: ^1.1.1
-  data_table_2: ^2.3.6
+  data_table_2: ^2.3.7
 
 
   custom_webview:
@@ -77,18 +77,18 @@ dependencies:
   dropdown_button2: ^1.7.2
   pdfx: ^2.2.0
   textfield_search: ^0.10.0
-  searchfield: ^0.6.9
+  searchfield: ^0.7.0
   csv: ^5.0.1
   pdf_render: ^1.3.1
-  syncfusion_flutter_charts: ^20.2.45
+  syncfusion_flutter_charts: ^20.2.48
   random_password_generator: ^0.2.1
   flutter_slidable: ^2.0.0
   intl: ^0.17.0
   app_settings: ^4.1.8
   contextmenu: ^3.0.0
-  syncfusion_flutter_datepicker: ^20.2.45
-
-
+  syncfusion_flutter_datepicker: ^20.2.48
+  badges: ^2.0.3
+  just_the_tooltip: ^0.0.12
 
 
 
