--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=debug
-flutter.versionCode=138
+flutter.buildMode=release
+flutter.versionCode=142
 flutter.sdk=D:\\SDK\\flutter
-flutter.versionName=1.1.98
+flutter.versionName=1.2.2
