--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.2.3+143
+version: 1.2.8+148
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -16,20 +16,20 @@ dependencies:
     sdk: flutter
 
   #  firebase------------------------------------------
-  firebase_core: ^1.23.0
-  firebase_crashlytics: ^2.8.11
-  firebase_auth: ^3.10.0
-  firebase_messaging: ^13.0.3
-  firebase_database: ^9.1.5
-  firebase_auth_platform_interface: ^6.9.0
-  firebase_core_web: ^1.7.2
+  firebase_core: ^1.24.0
+  firebase_crashlytics: ^2.8.12
+  firebase_auth: ^3.11.1
+  firebase_messaging: ^13.0.4
+  firebase_database: ^9.1.6
+  firebase_auth_platform_interface: ^6.10.0
+  firebase_core_web: ^1.7.3
 
   #  --------------------------------------------------
 
   flutter_share: 2.0.0
   flutter_barcode_scanner: ^2.0.0
-  flutter_pdfview: ^1.2.3
-  flutter_inappwebview: ^5.4.3+7
+  flutter_pdfview: ^1.2.5
+  flutter_inappwebview: ^5.4.4+2
   flutter_dropzone: ^3.0.5
 
   #  --------------------------------------------------
@@ -41,7 +41,7 @@ dependencies:
   image_picker: ^0.8.5+3
   jwt_decode: ^0.3.1
   webview_flutter: ^3.0.4
-  permission_handler: ^10.0.1
+  permission_handler: ^10.0.2
   path_provider: ^2.0.11
   hex: ^0.2.0
   package_info_plus: ^1.4.3+1
@@ -71,23 +71,27 @@ dependencies:
 
   dotted_border: ^2.0.0+2
   socket_io_client: ^2.0.0
-  file_picker: ^5.2.0
+  file_picker: ^5.2.0+1
   universal_html: ^2.0.8
   dropdown_button2: ^1.8.2
   pdfx: ^2.2.0
   textfield_search: ^0.10.0
   searchfield: ^0.7.0
   csv: ^5.0.1
-  pdf_render: ^1.3.2
-  syncfusion_flutter_charts: ^20.2.50
+  pdf_render: ^1.3.4
+  syncfusion_flutter_charts: ^20.3.47
   random_password_generator: ^0.2.1
   flutter_slidable: ^2.0.0
   intl: ^0.17.0
   app_settings: ^4.1.8
   contextmenu: ^3.0.0
-  syncfusion_flutter_datepicker: ^20.2.50
+  syncfusion_flutter_datepicker: ^20.3.47
   badges: ^2.0.3
   just_the_tooltip: ^0.0.12
+  url_launcher: ^6.1.6
+
+  json_theme: ^4.0.1+3
+  syncfusion_flutter_sliders: ^20.3.47
 
 
 
@@ -106,27 +110,9 @@ dev_dependencies:
 flutter:
 
   assets:
-    - assets/accountBlocked.jpg
-    - assets/fileNotFound.png
-    - assets/fonts/NsIcons.ttf
-    - assets/images/background.jpg
-    - assets/images/dark_background.jpg
-    - assets/images/user.png
-    - assets/images/userPlaceholder.jpg
-    - assets/js.js
-    - assets/js1.txt
-    - assets/loginVideo.mp4
-    - assets/noResult.png
-    - assets/noResult111.jpg
-    - assets/north_sails_logo.png
-    - assets/north_sails_logo_tr.png
-    - assets/north_sails_logox50.png
-    - assets/QACheckList.json
-    - assets/splash.png
-    - assets/splash1.png
-    - assets/uc.png
-    - assets/uc1.png
-    - assets/x.pdf
+    - assets/
+    - assets/fonts/
+    - assets/images/
   uses-material-design: true
   fonts:
     - family: NsIcons
