--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.2.11+151
+version: 1.2.13+153
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -17,7 +17,7 @@ dependencies:
 
   #  firebase------------------------------------------
   firebase_core: ^1.24.0
-  firebase_crashlytics: ^2.8.13
+  firebase_crashlytics: ^2.9.0
   firebase_auth: ^3.11.2
   firebase_messaging: ^13.1.0
   firebase_database: ^9.1.7
@@ -29,7 +29,7 @@ dependencies:
   flutter_share: 2.0.0
   flutter_barcode_scanner: ^2.0.0
   flutter_pdfview: ^1.2.5
-  flutter_inappwebview: ^5.4.4+3
+  flutter_inappwebview: ^5.5.0+2
   flutter_dropzone: ^3.0.5
 
   #  --------------------------------------------------
@@ -44,7 +44,7 @@ dependencies:
   permission_handler: ^10.1.0
   path_provider: ^2.0.11
   hex: ^0.2.0
-  package_info_plus: ^1.4.3+1
+  package_info_plus: ^2.0.0
   dropdown_search: ^5.0.3
   measured_size: ^1.0.0
   device_information: ^0.0.4
@@ -71,27 +71,27 @@ dependencies:
 
   dotted_border: ^2.0.0+2
   socket_io_client: ^2.0.0
-  file_picker: ^5.2.0+1
+  file_picker: ^5.2.1
   universal_html: ^2.0.8
-  dropdown_button2: ^1.8.2
-  pdfx: ^2.2.0
+  dropdown_button2: ^1.8.5
+  pdfx: ^2.3.0
   textfield_search: ^0.10.0
   searchfield: ^0.7.1
   csv: ^5.0.1
   pdf_render: ^1.3.4
-  syncfusion_flutter_charts: ^20.3.48
+  syncfusion_flutter_charts: ^20.3.49
   random_password_generator: ^0.2.1
   flutter_slidable: ^2.0.0
   intl: ^0.17.0
   app_settings: ^4.1.8
   contextmenu: ^3.0.0
-  syncfusion_flutter_datepicker: ^20.3.48
+  syncfusion_flutter_datepicker: ^20.3.49
   badges: ^2.0.3
   just_the_tooltip: ^0.0.12
   url_launcher: ^6.1.6
 
-  json_theme: ^4.0.1+3
-  syncfusion_flutter_sliders: ^20.3.48
+  json_theme: ^4.0.1+4
+  syncfusion_flutter_sliders: ^20.3.49
 
 
 
@@ -99,7 +99,7 @@ dev_dependencies:
 
   hive_generator: ^1.1.3
   json_serializable:
-  build_runner: ^2.2.1
+  build_runner: ^2.3.0
   flutter_test:
     sdk: flutter
   integration_test:
