--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
-org.gradle.jvmargs=-Xms1024m -Xmx4096m
+org.gradle.jvmargs=-Xmx1536m -XX:+UseParallelGC
 android.useAndroidX=true
 android.enableJetifier=true
+
