--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.2.31+171
+version: 1.2.33+173
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -18,8 +18,8 @@ dependencies:
   #  firebase------------------------------------------
   firebase_core: ^2.3.0
   firebase_crashlytics: ^3.0.6
-  firebase_auth: ^4.1.3
-  firebase_messaging: ^14.1.1
+  firebase_auth: ^4.1.4
+  firebase_messaging: ^14.1.2
   firebase_database: ^10.0.6
   firebase_auth_platform_interface: ^6.11.3
   firebase_core_web: ^2.0.1
@@ -29,7 +29,7 @@ dependencies:
   flutter_share: 2.0.0
   flutter_barcode_scanner: ^2.0.0
   flutter_pdfview: ^1.2.5
-  flutter_inappwebview: ^5.7.1+2
+  flutter_inappwebview: ^5.7.2
   flutter_dropzone: ^3.0.5
 
   #  --------------------------------------------------
@@ -49,8 +49,8 @@ dependencies:
   measured_size: ^1.0.0
   device_information: ^0.0.4
   device_info: ^2.0.3
-  cached_network_image: ^3.2.2
-  video_player: ^2.4.7
+  cached_network_image: ^3.2.3
+  video_player: ^2.4.8
   group_list_view: ^1.1.1
   data_table_2: ^2.3.8
 
@@ -71,28 +71,28 @@ dependencies:
 
   dotted_border: ^2.0.0+3
   socket_io_client: ^2.0.0
-  file_picker: ^5.2.2
+  file_picker: ^5.2.3
   universal_html: ^2.0.8
-  dropdown_button2: ^1.9.0
+  dropdown_button2: ^1.9.1
   pdfx: ^2.3.0
   textfield_search: ^0.10.0
   searchfield: ^0.7.2
   csv: ^5.0.1
   pdf_render: ^1.3.6
-  syncfusion_flutter_charts: ^20.3.57
+  syncfusion_flutter_charts: ^20.3.59
   random_password_generator: ^0.2.1
   flutter_slidable: ^2.0.0
   intl: ^0.17.0
   app_settings: ^4.1.8
   contextmenu: ^3.0.0
-  syncfusion_flutter_datepicker: ^20.3.57
+  syncfusion_flutter_datepicker: ^20.3.59
   badges: ^2.0.3
   just_the_tooltip: ^0.0.12
-  url_launcher: ^6.1.6
+  url_launcher: ^6.1.7
 
   json_theme: ^4.0.3+1
-  syncfusion_flutter_sliders: ^20.3.57
-  syncfusion_flutter_pdfviewer: ^20.3.57
+  syncfusion_flutter_sliders: ^20.3.59
+  syncfusion_flutter_pdfviewer: ^20.3.59
 
 
 
