--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.2.33+173
+version: 1.2.35+175
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -18,8 +18,8 @@ dependencies:
   #  firebase------------------------------------------
   firebase_core: ^2.3.0
   firebase_crashlytics: ^3.0.6
-  firebase_auth: ^4.1.4
-  firebase_messaging: ^14.1.2
+  firebase_auth: ^4.1.5
+  firebase_messaging: ^14.1.3
   firebase_database: ^10.0.6
   firebase_auth_platform_interface: ^6.11.3
   firebase_core_web: ^2.0.1
@@ -29,7 +29,7 @@ dependencies:
   flutter_share: 2.0.0
   flutter_barcode_scanner: ^2.0.0
   flutter_pdfview: ^1.2.5
-  flutter_inappwebview: ^5.7.2
+  flutter_inappwebview: ^5.7.2+1
   flutter_dropzone: ^3.0.5
 
   #  --------------------------------------------------
@@ -107,7 +107,7 @@ dev_dependencies:
     sdk: flutter
   build_web_compilers: ^3.2.7
   flutter_lints: ^2.0.1
-  dart_code_metrics: ^5.0.1
+  dart_code_metrics: ^5.1.0
 
 flutter:
 
