--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=debug
-flutter.versionCode=175
+flutter.buildMode=release
+flutter.versionCode=177
 flutter.sdk=D:\\SDK\\flutter
-flutter.versionName=1.2.35
+flutter.versionName=1.2.37
