--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=release
-flutter.versionCode=177
+flutter.buildMode=debug
+flutter.versionCode=180
 flutter.sdk=D:\\SDK\\flutter
-flutter.versionName=1.2.37
+flutter.versionName=1.2.40
