--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.2.58+198
+version: 1.2.66+206
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -17,7 +17,7 @@ dependencies:
 
   #  firebase------------------------------------------
   firebase_core: ^2.4.1
-  firebase_crashlytics: ^3.0.10
+  firebase_crashlytics: ^3.0.11
   firebase_auth: ^4.2.5
   firebase_messaging: ^14.2.1
   firebase_database: ^10.0.9
@@ -37,13 +37,13 @@ dependencies:
   dio: ^4.0.6
   percent_indicator: ^4.2.2
   nfc_manager: ^3.2.0
-  shared_preferences: ^2.0.16
+  shared_preferences: ^2.0.17
   animations: ^2.0.7
-  image_picker: ^0.8.6
+  image_picker: ^0.8.6+1
   jwt_decode: ^0.3.1
-  webview_flutter: ^4.0.1
+  webview_flutter: ^4.0.2
   permission_handler: ^10.2.0
-  path_provider: ^2.0.11
+  path_provider: ^2.0.12
   hex: ^0.2.0
   package_info_plus: ^3.0.2
   dropdown_search: ^5.0.5
@@ -51,14 +51,14 @@ dependencies:
   device_information: ^0.0.4
   device_info: ^2.0.3
   cached_network_image: ^3.2.3
-  video_player: ^2.4.10
+  video_player: ^2.5.1
   group_list_view: ^1.1.1
-  data_table_2: ^2.3.10
+  data_table_2: ^2.3.11
 
 
   custom_webview:
     path: ./Pugins/custom_webview
-  json_annotation: ^4.7.0
+  json_annotation: ^4.8.0
 
 
   hive: ^2.2.3
@@ -77,25 +77,26 @@ dependencies:
   dropdown_button2: ^1.9.2
   pdfx: ^2.3.0
   textfield_search: ^0.10.0
-  searchfield: ^0.7.3
+  searchfield: ^0.7.5
   csv: ^5.0.1
   pdf_render: ^1.3.6
 
-  syncfusion_flutter_charts: ^20.4.44
-  syncfusion_flutter_datepicker: ^20.4.44
-  syncfusion_flutter_sliders: ^20.4.44
-  syncfusion_flutter_pdfviewer: ^20.4.44
+  syncfusion_flutter_charts: ^20.4.48
+  syncfusion_flutter_datepicker: ^20.4.48
+  syncfusion_flutter_sliders: ^20.4.48
+  syncfusion_flutter_pdfviewer: ^20.4.48
 
   random_password_generator: ^0.2.1
   flutter_slidable: ^2.0.0
   intl: ^0.17.0
   app_settings: ^4.2.0
   contextmenu: ^3.0.0
-  badges: ^2.0.3
+  badges: ^3.0.2
   just_the_tooltip: ^0.0.12
-  url_launcher: ^6.1.7
+  url_launcher: ^6.1.8
 
-  json_theme: ^4.0.3+2
+  #  json_theme: ^4.0.3+2
+  restart_app: ^1.1.2
 
 
 
@@ -111,7 +112,7 @@ dev_dependencies:
     sdk: flutter
   build_web_compilers: ^3.2.7
   flutter_lints: ^2.0.1
-  dart_code_metrics: ^5.4.0
+  dart_code_metrics: ^5.5.1
 
 flutter:
 
