--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.2.66+206
+version: 1.2.74+214
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -16,13 +16,13 @@ dependencies:
     sdk: flutter
 
   #  firebase------------------------------------------
-  firebase_core: ^2.4.1
-  firebase_crashlytics: ^3.0.11
-  firebase_auth: ^4.2.5
-  firebase_messaging: ^14.2.1
-  firebase_database: ^10.0.9
-  firebase_auth_platform_interface: ^6.11.7
-  firebase_core_web: ^2.1.0
+  firebase_core: ^2.5.0
+  firebase_crashlytics: ^3.0.12
+  firebase_auth: ^4.2.6
+  firebase_messaging: ^14.2.2
+  firebase_database: ^10.0.10
+  firebase_auth_platform_interface: ^6.11.8
+  firebase_core_web: ^2.1.1
 
   #  --------------------------------------------------
 
@@ -45,7 +45,7 @@ dependencies:
   permission_handler: ^10.2.0
   path_provider: ^2.0.12
   hex: ^0.2.0
-  package_info_plus: ^3.0.2
+  package_info_plus: ^3.0.3
   dropdown_search: ^5.0.5
   measured_size: ^1.0.0
   device_information: ^0.0.4
@@ -53,7 +53,7 @@ dependencies:
   cached_network_image: ^3.2.3
   video_player: ^2.5.1
   group_list_view: ^1.1.1
-  data_table_2: ^2.3.11
+  data_table_2: ^2.3.12
 
 
   custom_webview:
@@ -81,10 +81,14 @@ dependencies:
   csv: ^5.0.1
   pdf_render: ^1.3.6
 
-  syncfusion_flutter_charts: ^20.4.48
-  syncfusion_flutter_datepicker: ^20.4.48
-  syncfusion_flutter_sliders: ^20.4.48
-  syncfusion_flutter_pdfviewer: ^20.4.48
+  syncfusion_flutter_pdf: 20.3.59
+  syncfusion_flutter_charts: 20.3.59
+  syncfusion_flutter_datepicker: 20.3.59
+  syncfusion_flutter_sliders: 20.3.59
+  syncfusion_flutter_pdfviewer: 20.3.59
+  syncfusion_pdfviewer_platform_interface: 20.3.59
+
+
 
   random_password_generator: ^0.2.1
   flutter_slidable: ^2.0.0
@@ -93,10 +97,11 @@ dependencies:
   contextmenu: ^3.0.0
   badges: ^3.0.2
   just_the_tooltip: ^0.0.12
-  url_launcher: ^6.1.8
+  url_launcher: ^6.1.9
 
   #  json_theme: ^4.0.3+2
   restart_app: ^1.1.2
+  pdf_thumbnail: ^0.1.5+1
 
 
 
