--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.2.74+214
+version: 1.2.78+218
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -16,13 +16,13 @@ dependencies:
     sdk: flutter
 
   #  firebase------------------------------------------
-  firebase_core: ^2.5.0
-  firebase_crashlytics: ^3.0.12
-  firebase_auth: ^4.2.6
-  firebase_messaging: ^14.2.2
-  firebase_database: ^10.0.10
-  firebase_auth_platform_interface: ^6.11.8
-  firebase_core_web: ^2.1.1
+  firebase_core: ^2.6.1
+  firebase_crashlytics: ^3.0.14
+  firebase_auth: ^4.2.8
+  firebase_messaging: ^14.2.4
+  firebase_database: ^10.0.13
+  firebase_auth_platform_interface: ^6.11.10
+  firebase_core_web: ^2.2.1
 
   #  --------------------------------------------------
 
@@ -34,7 +34,7 @@ dependencies:
   flutter_dropzone: ^3.0.5
 
   #  --------------------------------------------------
-  dio: ^4.0.6
+  dio: ^5.0.0
   percent_indicator: ^4.2.2
   nfc_manager: ^3.2.0
   shared_preferences: ^2.0.17
@@ -81,12 +81,12 @@ dependencies:
   csv: ^5.0.1
   pdf_render: ^1.3.6
 
-  syncfusion_flutter_pdf: 20.3.59
-  syncfusion_flutter_charts: 20.3.59
-  syncfusion_flutter_datepicker: 20.3.59
-  syncfusion_flutter_sliders: 20.3.59
-  syncfusion_flutter_pdfviewer: 20.3.59
-  syncfusion_pdfviewer_platform_interface: 20.3.59
+  syncfusion_flutter_pdf: ^20.4.50
+  syncfusion_flutter_charts: ^20.4.50
+  syncfusion_flutter_datepicker: ^20.4.50
+  syncfusion_flutter_sliders: ^20.4.50
+  syncfusion_flutter_pdfviewer: ^20.4.50
+  syncfusion_pdfviewer_platform_interface: ^20.4.50
 
 
 
@@ -117,12 +117,13 @@ dev_dependencies:
     sdk: flutter
   build_web_compilers: ^3.2.7
   flutter_lints: ^2.0.1
-  dart_code_metrics: ^5.5.1
+  dart_code_metrics: ^5.6.0
 
 flutter:
 
   assets:
     - assets/
+    - assets/android/
     - assets/fonts/
     - assets/images/
   uses-material-design: true
