--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=release
-flutter.versionCode=222
+flutter.buildMode=debug
+flutter.versionCode=223
 flutter.sdk=D:\\SDK\\flutter
-flutter.versionName=1.2.82
+flutter.versionName=1.2.83
