--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,8 +23,10 @@ linter:
   # producing the lint.
   rules:
     avoid_print: false
-    lowerCamelCase: false
     no_leading_underscores_for_local_identifiers: false
+    always_declare_return_types: true
+    camel_case_types: true
+
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
