--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,6 +81,28 @@ android {
 //            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 //        }
     }
+
+    flavorDimensions "default"
+    productFlavors {
+        dev {
+            applicationIdSuffix ".debug"
+//            resValue "string", "app_name", "AppNameFlavor1"
+        }
+        v2 {
+            applicationIdSuffix ".v2"
+
+//            resValue "string", "app_name", "AppNameFlavor1"
+//            manifestPlaceholders = [
+//                    appIcon     : "@mipmap/ic_launcher_v2",
+//                    appIconRound: "@mipmap/ic_launcher_v2",
+//                    appName     : "@string/app_name_v2"
+//            ]
+        }
+        prod {
+        }
+    }
+
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_14
         targetCompatibility JavaVersion.VERSION_14
@@ -96,30 +118,40 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0"
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
-    implementation 'com.google.firebase:firebase-analytics:21.2.0'
+    implementation 'com.google.firebase:firebase-analytics:21.2.1'
     implementation 'com.tom-roush:pdfbox-android:2.0.21.0'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'com.azeesoft.lib.colorpicker:colorpicker:1.0.8@aar'
-    implementation 'com.github.barteksc:pdfium-android:1.9.0'
+//    implementation 'com.github.barteksc:pdfium-android:1.9.0'
+    implementation 'com.github.mhiew:pdfium-android:1.9.2'
+
     implementation 'org.apache.commons:commons-io:1.3.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
-    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-auth:21.2.0'
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
 
     implementation 'androidx.annotation:annotation:1.6.0'
-    implementation 'androidx.webkit:webkit:1.6.0'
+    implementation 'androidx.webkit:webkit:1.6.1'
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-inline:4.8.0'
+    testImplementation 'org.mockito:mockito-inline:5.1.0'
     testImplementation 'androidx.test:core:1.5.0'
 
 
     implementation "androidx.core:core-ktx:1.9.0"
 }
+
+//configurations {
+//    all {
+//        resolutionStrategy {
+//            force 'com.github.barteksc:pdfium-android:1.9.0'
+//        }
+//    }
+//}
