--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         maven {
             url = uri("https://plugins.gradle.org/m2/")
         }
+        mavenCentral()  // Maven Central repository
 
     }
 
@@ -23,6 +24,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()  // Maven Central repository
 //        jcenter()
     }
 }
