--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.2.87+227
+version: 1.2.93+233
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -16,13 +16,13 @@ dependencies:
     sdk: flutter
 
   #  firebase------------------------------------------
-  firebase_core: ^2.7.1
-  firebase_crashlytics: ^3.0.16
-  firebase_auth: ^4.2.10
-  firebase_messaging: ^14.2.6
-  firebase_database: ^10.0.15
-  firebase_auth_platform_interface: ^6.11.12
-  firebase_core_web: ^2.2.2
+  firebase_core: ^2.9.0
+  firebase_crashlytics: ^3.1.0
+  firebase_auth: ^4.4.0
+  firebase_messaging: ^14.4.0
+  firebase_database: ^10.1.0
+  firebase_auth_platform_interface: ^6.13.0
+  firebase_core_web: ^2.3.0
   #  --------------------------------------------------
 
 
@@ -33,16 +33,15 @@ dependencies:
   flutter_dropzone: ^3.0.5
 
   #  --------------------------------------------------
-  dio: ^5.0.0
-  percent_indicator: ^4.2.2
+  dio: ^5.1.1
+  percent_indicator: ^4.2.3
   nfc_manager: ^3.2.0
-  shared_preferences: ^2.0.17
+  shared_preferences: ^2.0.20
   animations: ^2.0.7
-  image_picker: ^0.8.6+1
   jwt_decode: ^0.3.1
-  webview_flutter: ^4.0.2
+  webview_flutter: ^4.0.7
   permission_handler: ^10.2.0
-  path_provider: ^2.0.12
+  path_provider: ^2.0.14
   hex: ^0.2.0
   package_info_plus: ^3.0.3
   dropdown_search: ^5.0.6
@@ -50,7 +49,7 @@ dependencies:
   device_information: ^0.0.4
   device_info: ^2.0.3
   cached_network_image: ^3.2.3
-  video_player: ^2.5.3
+  video_player: ^2.6.1
   group_list_view: ^1.1.1
   data_table_2: ^2.4.1
 
@@ -71,36 +70,36 @@ dependencies:
 
   dotted_border: ^2.0.0+3
   socket_io_client: ^2.0.1
-  file_picker: ^5.2.5
-  universal_html: ^2.0.9
+  file_picker: ^5.2.7
+  universal_html: ^2.2.1
   dropdown_button2: ^2.0.0
   pdfx: ^2.3.0
-  textfield_search: ^0.10.0
+  #  textfield_search: ^0.10.0
   searchfield: ^0.7.5
   csv: ^5.0.1
-  pdf_render: ^1.3.6
+  pdf_render: ^1.3.8
 
   syncfusion_flutter_pdf: ^20.4.50
   syncfusion_flutter_charts: ^20.4.50
   syncfusion_flutter_datepicker: ^20.4.50
   syncfusion_flutter_sliders: ^20.4.50
-  syncfusion_flutter_pdfviewer: ^20.4.50
-  syncfusion_pdfviewer_platform_interface: ^20.4.50
+  #  syncfusion_flutter_pdfviewer: ^20.4.50
+  #  syncfusion_pdfviewer_platform_interface: ^20.4.50
 
 
 
   random_password_generator: ^0.2.1
-  flutter_slidable: ^2.0.0
+  #  flutter_slidable: ^2.0.0
   intl: ^0.17.0
   app_settings: ^4.2.0
   contextmenu: ^3.0.0
-  badges: ^3.0.2
+  badges: ^3.0.3
   just_the_tooltip: ^0.0.12
-  url_launcher: ^6.1.9
+  #  url_launcher: ^6.1.10
 
   #  json_theme: ^4.0.3+2
   restart_app: ^1.1.2
-  pdf_thumbnail: ^0.1.5+1
+#  pdf_thumbnail: ^0.1.5+1
 
 
 
@@ -117,7 +116,7 @@ dev_dependencies:
     sdk: flutter
   build_web_compilers: ^3.2.7
   flutter_lints: ^2.0.1
-  dart_code_metrics: ^5.6.0
+  dart_code_metrics: ^5.7.0
 
 flutter:
 
@@ -127,8 +126,6 @@ flutter:
     - assets/fonts/
     - assets/images/
     - assets/rf/
-    - assets/rf/RF-SMARTLogin1_files/
-    - assets/rf/RF-SMARTLogin_files/
   uses-material-design: true
   fonts:
     - family: NsIcons
