--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.2.93+233
+version: 1.3.4+244
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -21,14 +21,14 @@ dependencies:
   firebase_auth: ^4.4.0
   firebase_messaging: ^14.4.0
   firebase_database: ^10.1.0
-  firebase_auth_platform_interface: ^6.13.0
-  firebase_core_web: ^2.3.0
+  #  firebase_auth_platform_interface: ^6.13.0
+  #  firebase_core_web: ^2.3.0
   #  --------------------------------------------------
 
 
   flutter_share: 2.0.0
   flutter_barcode_scanner: ^2.0.0
-  flutter_pdfview: ^1.2.7
+  flutter_pdfview: ^1.3.0
   flutter_inappwebview: ^5.7.2+3
   flutter_dropzone: ^3.0.5
 
@@ -36,22 +36,22 @@ dependencies:
   dio: ^5.1.1
   percent_indicator: ^4.2.3
   nfc_manager: ^3.2.0
-  shared_preferences: ^2.0.20
+  shared_preferences: ^2.1.0
   animations: ^2.0.7
-  jwt_decode: ^0.3.1
+  #  jwt_decode: ^0.3.1
   webview_flutter: ^4.0.7
   permission_handler: ^10.2.0
   path_provider: ^2.0.14
   hex: ^0.2.0
   package_info_plus: ^3.0.3
-  dropdown_search: ^5.0.6
+  #  dropdown_search: ^5.0.6
   measured_size: ^1.0.0
   device_information: ^0.0.4
   device_info: ^2.0.3
   cached_network_image: ^3.2.3
   video_player: ^2.6.1
   group_list_view: ^1.1.1
-  data_table_2: ^2.4.1
+  data_table_2: ^2.4.2
 
 
   custom_webview:
@@ -60,7 +60,7 @@ dependencies:
 
 
   hive: ^2.2.3
-  hive_flutter: ^1.1.0
+  #  hive_flutter: ^1.1.0
   uuid: ^3.0.7
 
   splash_screen_view: ^3.0.0
@@ -69,20 +69,20 @@ dependencies:
   timeline_tile: ^2.0.0
 
   dotted_border: ^2.0.0+3
-  socket_io_client: ^2.0.1
+  #  socket_io_client: ^2.0.1
   file_picker: ^5.2.7
   universal_html: ^2.2.1
-  dropdown_button2: ^2.0.0
+  #  dropdown_button2: ^2.0.0
   pdfx: ^2.3.0
   #  textfield_search: ^0.10.0
   searchfield: ^0.7.5
   csv: ^5.0.1
   pdf_render: ^1.3.8
 
-  syncfusion_flutter_pdf: ^20.4.50
-  syncfusion_flutter_charts: ^20.4.50
-  syncfusion_flutter_datepicker: ^20.4.50
-  syncfusion_flutter_sliders: ^20.4.50
+  syncfusion_flutter_pdf: ^21.1.38
+  syncfusion_flutter_charts: ^21.1.38
+  syncfusion_flutter_datepicker: ^21.1.38
+  syncfusion_flutter_sliders: ^21.1.38
   #  syncfusion_flutter_pdfviewer: ^20.4.50
   #  syncfusion_pdfviewer_platform_interface: ^20.4.50
 
@@ -93,7 +93,7 @@ dependencies:
   intl: ^0.17.0
   app_settings: ^4.2.0
   contextmenu: ^3.0.0
-  badges: ^3.0.3
+  #  badges: ^3.0.3
   just_the_tooltip: ^0.0.12
   #  url_launcher: ^6.1.10
 
@@ -101,12 +101,13 @@ dependencies:
   restart_app: ^1.1.2
 #  pdf_thumbnail: ^0.1.5+1
 
+  dart_ping: ^8.0.1
 
 
 
 
 dev_dependencies:
-
+  dependency_validator: ^3.2.2
   hive_generator: ^2.0.0
   json_serializable:
   build_runner: ^2.3.3
