--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=release
-flutter.versionCode=254
+flutter.buildMode=debug
+flutter.versionCode=255
 flutter.sdk=D:\\SDK\\flutter
-flutter.versionName=1.4.4
+flutter.versionName=1.4.5
